--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/favicon.png" rel="icon">
+  <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -140,7 +140,7 @@
 
             <h2>Minusta</h2>
             <p class="mb-0">Valtteri Kinnunen, Fullstack Developer</p>
-              <p><img src="assets/img/plchld.jfif" alt=""></p>
+              <p><img src="assets/pic_self_small.png" alt="" class="img-fluid"></p>
           </div>
 
         </div>
@@ -207,7 +207,6 @@
           </div>
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
-            <!-- <p><img src="assets/img/person_1_sq.jpg" alt="Image" class="img-fluid"></p> -->
             <p>Olen heinäkuussa 2022 valmistunut Luonnontieteiden kandidaatiksi Oulun yliopistosta. Pääaineena Tietojenkäsittelytiede ja sivuaineena tietotekniikka.
               LuK-tutkielman aiheena oli tietoturvamenetelmät pilvipalveluissa. Vapaa-ajalla tykkään pelata videopelejä, soittaa ja kuunnella musiikkia sekä koodata.</p>
             <p>Työntekijänä toimin hyvin ryhmässä sekä itsenäisesti. Täsmällinen ja rauhallinen luonne näkyy työn laadussa.</p>
@@ -292,20 +291,12 @@
         </div>
         <div class="col-sm-6 social text-md-end">
             <a href="https://www.github.com/valkinnu"><span class="bi bi-github"></span></a>
-            <a href="#"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
   </footer>
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/main.js"></script>
