--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/favicon.png" rel="icon">
+  <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -37,12 +37,6 @@
   <!--Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Vendor CSS Files
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  -->
 
   <!-- Template Main CSS File -->
   <link href="assets/style.css" rel="stylesheet">
@@ -102,17 +96,16 @@
         </div>
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
-            <!-- <p><img src="assets/img/person_1_sq.jpg" alt="Image" class="img-fluid"></p> -->
+            <p>Pythonilla tehty miinaharava, GUI tehty haravasto-kirjastoa käyttämällä.</p>
             <a href="https://github.com/valkinnu/projects/blob/main/minesweeper.py" 
             target="_blank">Miinaharava - Python - Github lähdekoodi</a><br><br>
+            <p>Javalla tehty hirsipuu yksinkertaisella GUI:lla</p>
             <a href="https://github.com/valkinnu/projects/tree/main/Hangman"
             target="_blank">Hirsipuu - Java - Github lähdekoodi</a><br><br>
+            <p>C-ohjelma joka etsii käyttäjän syöttämästä .txt tiedostosta sen 100 yleisintä sanaa.</p>
             <a href="https://github.com/valkinnu/projects/blob/main/100words.c"
             target="_blank">Yleisimmät sanat - C - Github lähdekoodi</a><br><br>
-            <a href="hissi.html" target="_blank">Hissi - HTML/CSS/Javascript</a><br><br>
-            <a href="noppapeli.html" target="_blank">Noppapeli - HTML/CSS/Javascript</a><br><br>
-            <a href="lampomittari.html" target="_blank">Lämpömittari - HTML/CSS/Javascript</a><br><br>
-
+          
           </div>
 
         </div>
@@ -149,12 +142,6 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/main.js"></script>
