--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
           <ul class="custom-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Minusta</a></li>
-            <li><a href="CV_KinnunenValtteri_FI.pdf" target="_blank">CV</a></li>
+            <li><a href="assets/CV_KinnunenValtteri_FI.pdf" target="_blank">CV</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li class="active"><a href="contact.html">Ota yhteyttä</a></li>
           </ul>
@@ -90,57 +90,11 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Ota yhteyttä</h2>
-            <p class="mb-0">Lähetä minulle viesti täyttämällä alla oleva lomake. <br>
-              Olen tavoitettavissa myös suoraan sähköpostilla tai puhelimella.
-            </p>
           </div>
 
         </div>
-
-        <div class="row">
-          <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-
-              <div class="row gy-3">
-                <div class="col-md-6 form-group">
-                  <label for="name">Nimi</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="col-md-6 form-group">
-                  <label for="name">Sähköposti</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-                <div class="col-md-12 form-group">
-                  <label for="name">Otsikko</label>
-                  <input type="text" class="form-control" name="subject" id="subject" required>
-                </div>
-                <div class="col-md-12 form-group">
-                  <label for="name">Viesti</label>
-                  <textarea class="form-control" name="message" cols="30" rows="10" required></textarea>
-                </div>
-
-                <div class="col-md-12 my-3">
-                  <div class="loading">Ladataan</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Viesti lähetetty, kiitos!</div>
-                </div>
-
-                <div class="col-md-6 mt-0 form-group">
-                  <input type="submit" class="readmore d-block w-100" value="Lähetä viesti">
-                </div>
-              </div>
-
-            </form>
-
-          </div>
-
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
             <ul class="list-unstyled">
-              <li class="mb-3">
-                <strong class="d-block mb-1">Osoite</strong>
-                <span>Tapiontie 13 A 44, 90570 Oulu</span>
-              </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Puhelinnumero</strong>
                 <span>+358 504104341</span>
@@ -148,6 +102,10 @@
               <li class="mb-3">
                 <strong class="d-block mb-1">Sähköposti</strong>
                 <span>vappek0@gmail.com</span>
+              </li>
+              <li class="mb-3">
+                <strong class="d-block mb-1">Osoite</strong>
+                <span>Tapiontie 13 A 44, 90570 Oulu</span>
               </li>
             </ul>
           </div>
