--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
           <ul class="custom-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Minusta</a></li>
-            <li><a href="CV_KinnunenValtteri_FI.pdf" target="_blank">CV</a></li>
+            <li><a href="assets/CV_KinnunenValtteri_FI.pdf" target="_blank">CV</a></li>
             <li class="active"><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Ota yhteyttä</a></li>
           </ul>
