--- a/about.html
+++ b/about.html
@@ -5,40 +5,40 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio - Valtteri Kinnunen</title>
+  <title>Minusta</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/favicon.png" rel="icon">
-  <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+ <!-- Bootstrap -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Swiper -->
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+ <!-- Swiper -->
+ <link
+ rel="stylesheet"
+ href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+ <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
-  <!-- aos -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ <!-- aos -->
+ <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+ <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-  <!--isotope_layout-->
-  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+ <!--isotope_layout-->
+ <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+ <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
 
-  <!--Bootstrap icons-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
+ <!--Bootstrap icons-->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/style.css" rel="stylesheet">
+ <!-- Template Main CSS File -->
+ <link href="assets/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyPortfolio - v4.9.1
@@ -56,8 +56,8 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">Minusta</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">Minusta</a></li>
             <li><a href="assets/CV_KinnunenValtteri_FI.pdf" target="_blank">CV</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Ota yhteyttä</a></li>
@@ -83,71 +83,20 @@
 
   <main id="main">
 
-    <!-- ======= Works Section ======= -->
-    <section class="section site-portfolio">
-      <div class="container">
-        <div class="row mb-5 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hei, olen Valtteri Kinnunen</h2>
-            <p class="mb-0">Fullstack Developer</p>
-          </div>
-          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
-            <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">CV</a>
-              <a href="#" data-filter=".design">Portfolio</a>
-              <a href="#" data-filter=".branding">Yhteystiedot</a>
-            </div>
-          </div>
-        </div>
-        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="assets/CV_KinnunenValtteri_FI.pdf" target="_blank" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Ansioluettelo</h3>
-                <span>CV</span>
-              </div>
-              <img class="img-fluid" src="assets/cvicon.png">
-            </a>
-          </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="portfolio.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Portfolio</h3>
-                <span>Tehtyjä töitä</span>
-              </div>
-              <img class="img-fluid" src="assets/portfolio.png">
-            </a>
-          </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="contact.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Yhteystiedot</h3>
-                <span>Ota yhteyttä!</span>
-              </div>
-              <img class="img-fluid" src="assets/contactme.png">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section><!-- End  Works Section -->
-
-    <!-- ===== About Me section ===== -->
     <section class="section pb-5">
       <div class="container">
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
-
             <h2>Minusta</h2>
-            <p class="mb-0">Valtteri Kinnunen, Fullstack Developer</p>
-              <p><img src="assets/pic_self_small.png" alt="" class="img-fluid"></p>
+            <p class="mb-0">Valtteri Kinnunen, LuK.</p>
+              <p><img src="assets/pic_self_small.png" alt=""></p>
           </div>
 
         </div>
 
         <div class="row">
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
-            <h3 class="h3 mb-4">Taidot</h3>
+            <h3 class="h3 mb-4">Skills</h3>
             <ul class="list-unstyled">
               <li class="mb-3">
                 <div class="d-flex mb-1">
@@ -208,9 +157,10 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p>Olen heinäkuussa 2022 valmistunut Luonnontieteiden kandidaatiksi Oulun yliopistosta. Pääaineena Tietojenkäsittelytiede ja sivuaineena tietotekniikka.
-              LuK-tutkielman aiheena oli tietoturvamenetelmät pilvipalveluissa. Vapaa-ajalla tykkään pelata videopelejä, soittaa ja kuunnella musiikkia sekä koodata.</p>
+              LuK-tutkielman aiheena oli tietoturvamenetelmät pilvipalveluissa. Vapaa-ajalla tykkään pelata videopelejä, soittaa ja kuunnella musiikkia sekä koodata.
+            </p>
             <p>Työntekijänä toimin hyvin ryhmässä sekä itsenäisesti. Täsmällinen ja rauhallinen luonne näkyy työn laadussa.</p>
-            <p><a href="assets/CV_KinnunenValtteri_FI.pdf" target="_blank" class="readmore">Lataa CV</a></p>
+            <p><a href="CV_KinnunenValtteri_FI.pdf" target="_blank" class="readmore">Lataa CV</a></p>
           </div>
 
         </div>
@@ -218,58 +168,6 @@
       </div>
 
     </section>
-    
-    <!-- ======= Services Section ======= -->
-    <section class="section services">
-      <div class="container">
-        <div class="row justify-content-center text-center mb-4">
-          <div class="col-5">
-            <h3 class="h3 heading">Taidot</h3>
-            <p>Ohessa tutuksi tulleita teknologioita</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <i class="bi bi-card-checklist-"></i>
-            <h4 class="h4 mb-2"></h4>
-            <p></p>
-            <ul class="list-unstyled list">
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
-        
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <i class="bi bi-card-checklist"></i>
-            <h4 class="h4 mb-2">Frontti</h4>
-            <p>Frontendistä löytyy taitoa seuraavista</p>
-            <ul class="list-unstyled list-line">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JS/jQuery</li>
-              <li>Bootstrap</li>
-              <li>React/Angular</li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <i class="bi bi-card-checklist"></i>
-            <h4 class="h4 mb-2">Bäkki</h4>
-            <p>Backendistä löytyy taitoa seuraavista</p>
-            <ul class="list-unstyled list-line">
-              <li>C/C++</li>
-              <li>Python</li>
-              <li>Java</li>
-              <li>PHP</li>
-              <li>Node.js</li>
-              <li>SQL/MongoDB</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Services Section -->
 
   </main><!-- End #main -->
 
@@ -290,7 +188,8 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
-            <a href="https://www.github.com/valkinnu"><span class="bi bi-github"></span></a>
+          <a href="https://www.github.com/valkinnu"><span class="bi bi-github"></span></a>
+          <a href="#"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
@@ -299,7 +198,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Template Main JS File -->
-  <script src="assets/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
