--- a/about.html
+++ b/about.html
@@ -10,35 +10,35 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/favicon.png" rel="icon">
+  <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
- <!-- Bootstrap -->
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
- <!-- Swiper -->
- <link
- rel="stylesheet"
- href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <!-- Swiper -->
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
- <!-- aos -->
- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- aos -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
- <!--isotope_layout-->
- <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
- <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+  <!--isotope_layout-->
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
 
- <!--Bootstrap icons-->
- <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!--Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" rel="stylesheet">
 
- <!-- Template Main CSS File -->
- <link href="assets/style.css" rel="stylesheet">
+  <!-- Template Main CSS File -->
+  <link href="assets/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyPortfolio - v4.9.1
@@ -88,7 +88,7 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Minusta</h2>
-            <p class="mb-0">Valtteri Kinnunen, LuK.</p>
+            <p class="mb-0">Valtteri Kinnunen, Fullstack Developer</p>
               <p><img src="assets/pic_self_small.png" alt=""></p>
           </div>
 
@@ -101,7 +101,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>HTML/CSS</strong>
-                  <span class="ml-auto">95%</span>
+                  <span class="ml-auto">&nbsp;95%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -110,7 +110,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Javascript</strong>
-                  <span class="ml-auto">90%</span>
+                  <span class="ml-auto">&nbsp;90%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -119,7 +119,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>C/C++</strong>
-                  <span class="ml-auto">70%</span>
+                  <span class="ml-auto">&nbsp;70%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -128,7 +128,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Java</strong>
-                  <span class="ml-auto">75%</span>
+                  <span class="ml-auto">&nbsp;75%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -137,7 +137,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Python</strong>
-                  <span class="ml-auto">85%</span>
+                  <span class="ml-auto">&nbsp;85%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -146,7 +146,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>React/Angular/Node.js</strong>
-                  <span class="ml-auto">70%</span>
+                  <span class="ml-auto">&nbsp;70%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
