--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>HTML/CSS</strong>
-                  <span class="ml-auto">95%</span>
+                  <span class="ml-auto">&nbsp;95%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -161,7 +161,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Javascript</strong>
-                  <span class="ml-auto">90%</span>
+                  <span class="ml-auto">&nbsp;90%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -170,7 +170,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>C/C++</strong>
-                  <span class="ml-auto">70%</span>
+                  <span class="ml-auto">&nbsp;70%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -179,7 +179,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Java</strong>
-                  <span class="ml-auto">75%</span>
+                  <span class="ml-auto">&nbsp;75%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -188,7 +188,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Python</strong>
-                  <span class="ml-auto">85%</span>
+                  <span class="ml-auto">&nbsp;85%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -197,7 +197,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>React/Angular/Node.js</strong>
-                  <span class="ml-auto">70%</span>
+                  <span class="ml-auto">&nbsp;70%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
