--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
           <div class="col-md-6" data-aos="fade-up">
             <h2>Minusta</h2>
             <p class="mb-0">Valtteri Kinnunen, Fullstack Developer</p>
-              <p><img src="assets/pic_self_small.png" alt=""></p>
+              <p><img src="assets/pic_self_small.png" alt="" class="img-fluid"></p>
           </div>
 
         </div>
@@ -160,7 +160,7 @@
               LuK-tutkielman aiheena oli tietoturvamenetelmät pilvipalveluissa. Vapaa-ajalla tykkään pelata videopelejä, soittaa ja kuunnella musiikkia sekä koodata.
             </p>
             <p>Työntekijänä toimin hyvin ryhmässä sekä itsenäisesti. Täsmällinen ja rauhallinen luonne näkyy työn laadussa.</p>
-            <p><a href="CV_KinnunenValtteri_FI.pdf" target="_blank" class="readmore">Lataa CV</a></p>
+            <p><a href="assets/CV_KinnunenValtteri_FI.pdf" target="_blank" class="readmore">Lataa CV</a></p>
           </div>
 
         </div>
@@ -189,7 +189,6 @@
         </div>
         <div class="col-sm-6 social text-md-end">
           <a href="https://www.github.com/valkinnu"><span class="bi bi-github"></span></a>
-          <a href="#"><span class="bi bi-linkedin"></span></a>
         </div>
       </div>
     </div>
