--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/main.js"></script>
 
 </body>
 
